--- a/T365CalculatorScreens/Base.lproj/Contact.storyboard
+++ b/T365CalculatorScreens/Base.lproj/Contact.storyboard
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="FYA-sh-v3q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="FYA-sh-v3q">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Proxima Nova Medium.otf">
+            <string>ProximaNova-Medium</string>
+            <string>ProximaNova-Medium</string>
+        </mutableArray>
+        <mutableArray key="Proxima Nova Reg.otf">
+            <string>ProximaNova-Regular</string>
+            <string>ProximaNova-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Add Contact Controller-->
         <scene sceneID="XQz-Ls-5DK">
@@ -63,5 +73,150 @@
             </objects>
             <point key="canvasLocation" x="526.5" y="608"/>
         </scene>
+        <!--Contacts Controller-->
+        <scene sceneID="Pb3-IM-q4S">
+            <objects>
+                <viewController storyboardIdentifier="ContactsController" id="nLD-mj-MQh" customClass="ContactsController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ive-Po-5YD"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jbm-mF-EWh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IpZ-Ga-A7v">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AZz-mL-310" userLabel="containerView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HgF-Vp-LE5" userLabel="searchView">
+                                        <rect key="frame" x="10" y="10" width="580" height="55"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="searchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4OP-bI-gSs">
+                                                <rect key="frame" x="9" y="15" width="32" height="32"/>
+                                                <color key="backgroundColor" red="0.81960784310000001" green="0.28235294119999998" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            </imageView>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search by Name, Title, Address or Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nnW-vJ-evt">
+                                                <rect key="frame" x="46" y="12" width="489" height="31"/>
+                                                <color key="textColor" red="0.64313725489999995" green="0.64313725489999995" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="2rf-eM-Z4q"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wnS-QC-eNC">
+                                        <rect key="frame" x="0.0" y="85" width="600" height="515"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ProfileCell" id="Ccx-iy-TLE">
+                                                <rect key="frame" x="0.0" y="28" width="600" height="81"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ccx-iy-TLE" id="nTz-Sh-xPi">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Con-vi-GYQ" userLabel="Image View" customClass="CircularImageView" customModule="T365CalculatorScreens" customModuleProvider="target">
+                                                            <rect key="frame" x="15" y="20" width="40" height="40"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="40" id="Dp5-ay-c7X"/>
+                                                                <constraint firstAttribute="height" constant="40" id="vfX-L6-Iv7"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carolyn Altonadi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CpF-qR-jky">
+                                                            <rect key="frame" x="71" y="22" width="482" height="16"/>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="16"/>
+                                                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real Estate Agent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6L-CM-REN">
+                                                            <rect key="frame" x="71" y="43" width="482" height="14"/>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="14"/>
+                                                            <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starredActive" translatesAutoresizingMaskIntoConstraints="NO" id="t2h-JZ-7JY">
+                                                            <rect key="frame" x="569" y="32" width="16" height="16"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="16" id="Zez-Cy-M8p"/>
+                                                                <constraint firstAttribute="width" constant="16" id="scz-KP-Ixz"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="1010" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inactive" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qb7-4d-7gv">
+                                                            <rect key="frame" x="523" y="32" width="62" height="17"/>
+                                                            <color key="backgroundColor" red="0.94901960784313721" green="0.33333333333333331" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="17" id="ibk-fS-DAJ"/>
+                                                                <constraint firstAttribute="width" constant="62" id="whg-ws-Tpe"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="11"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                    <integer key="value" value="7"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="t2h-JZ-7JY" firstAttribute="centerY" secondItem="nTz-Sh-xPi" secondAttribute="centerY" id="6Ah-rq-flB"/>
+                                                        <constraint firstItem="t2h-JZ-7JY" firstAttribute="leading" secondItem="CpF-qR-jky" secondAttribute="trailing" constant="16" id="8HF-rA-4F1"/>
+                                                        <constraint firstItem="j6L-CM-REN" firstAttribute="centerY" secondItem="Con-vi-GYQ" secondAttribute="centerY" constant="10" id="ATy-gx-hRB"/>
+                                                        <constraint firstItem="Con-vi-GYQ" firstAttribute="leading" secondItem="nTz-Sh-xPi" secondAttribute="leading" constant="15" id="OZ7-mg-Odj"/>
+                                                        <constraint firstItem="Con-vi-GYQ" firstAttribute="centerY" secondItem="nTz-Sh-xPi" secondAttribute="centerY" id="TCi-Dm-4aG"/>
+                                                        <constraint firstItem="j6L-CM-REN" firstAttribute="trailing" secondItem="CpF-qR-jky" secondAttribute="trailing" id="Vc7-gw-6cZ"/>
+                                                        <constraint firstItem="CpF-qR-jky" firstAttribute="leading" secondItem="Con-vi-GYQ" secondAttribute="trailing" constant="16" id="cM9-mr-LJg"/>
+                                                        <constraint firstItem="CpF-qR-jky" firstAttribute="centerY" secondItem="Con-vi-GYQ" secondAttribute="centerY" constant="-10" id="o0b-PY-Xd6"/>
+                                                        <constraint firstItem="j6L-CM-REN" firstAttribute="leading" secondItem="CpF-qR-jky" secondAttribute="leading" id="oan-E6-6Q3"/>
+                                                        <constraint firstItem="qb7-4d-7gv" firstAttribute="centerY" secondItem="nTz-Sh-xPi" secondAttribute="centerY" id="slk-be-vkx"/>
+                                                        <constraint firstAttribute="trailing" secondItem="t2h-JZ-7JY" secondAttribute="trailing" constant="15" id="ujE-nj-HUv"/>
+                                                        <constraint firstAttribute="trailing" secondItem="qb7-4d-7gv" secondAttribute="trailing" constant="15" id="zZY-00-Gld"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="nLD-mj-MQh" id="7pp-GK-Q9f"/>
+                                            <outlet property="delegate" destination="nLD-mj-MQh" id="pR1-C6-fcC"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="wnS-QC-eNC" secondAttribute="trailing" id="0KE-qa-yYq"/>
+                                    <constraint firstItem="wnS-QC-eNC" firstAttribute="top" secondItem="HgF-Vp-LE5" secondAttribute="bottom" constant="20" id="59c-od-8lX"/>
+                                    <constraint firstItem="wnS-QC-eNC" firstAttribute="leading" secondItem="AZz-mL-310" secondAttribute="leading" id="B77-Zj-9am"/>
+                                    <constraint firstAttribute="trailing" secondItem="HgF-Vp-LE5" secondAttribute="trailing" constant="10" id="Ef7-VN-wDy"/>
+                                    <constraint firstAttribute="bottom" secondItem="wnS-QC-eNC" secondAttribute="bottom" id="mcU-Ex-UfO"/>
+                                    <constraint firstItem="HgF-Vp-LE5" firstAttribute="top" secondItem="AZz-mL-310" secondAttribute="top" constant="10" id="o2a-Ms-gej"/>
+                                    <constraint firstItem="HgF-Vp-LE5" firstAttribute="leading" secondItem="AZz-mL-310" secondAttribute="leading" constant="10" id="wk4-Kb-swL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="AZz-mL-310" firstAttribute="leading" secondItem="IpZ-Ga-A7v" secondAttribute="leading" id="090-pC-9Sb"/>
+                            <constraint firstItem="AZz-mL-310" firstAttribute="top" secondItem="IpZ-Ga-A7v" secondAttribute="top" id="Rqh-h3-LJr"/>
+                            <constraint firstItem="Jbm-mF-EWh" firstAttribute="top" secondItem="AZz-mL-310" secondAttribute="bottom" id="pck-6q-nqA"/>
+                            <constraint firstAttribute="trailing" secondItem="AZz-mL-310" secondAttribute="trailing" id="uti-Mj-IZr"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="theTableView" destination="wnS-QC-eNC" id="Uy7-jI-bb7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xew-1W-a6Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="897" y="587"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="searchIcon" width="64" height="64"/>
+        <image name="starredActive" width="16" height="15"/>
+    </resources>
 </document>
