--- a/T365CalculatorScreens/Base.lproj/AccountRep.storyboard
+++ b/T365CalculatorScreens/Base.lproj/AccountRep.storyboard
@@ -902,7 +902,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="webIcon" translatesAutoresizingMaskIntoConstraints="NO" id="c5l-VQ-M74" customClass="CircularImageView" customModule="T365CalculatorScreens" customModuleProvider="target">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c5l-VQ-M74" customClass="CircularImageView" customModule="T365CalculatorScreens" customModuleProvider="target">
                                                     <rect key="frame" x="15" y="20" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="40" id="Fq2-gx-AB2"/>
